gridButton aria-label changing with click
gridButton-text changing with click

Main menu is closed by click at any elements on page + code was improved

Mobile adaptive

Changed and added screenshots(pc/mobile)

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </main>
 
         <footer class="footer">
-            <button id="footer__gridButton" aria-label="Grid view">
+            <button id="footer__gridButton" aria-label="Grid view off">
                 <img src="img/footer-grid-button.png" src="" aria-hidden="true" />
                 <span class="footer__gridButton-text">Show in grid</span>
             </button>
